--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,5 +1,10 @@
 {
   "orgName": "danielgustafson Company",
-  "edition": "Developer",
-  "features": []
+  "edition": "Enterprise",
+  "features": [],
+  "settings" : {
+    "knowledgeSettings" : {
+      "enableKnowledge" : true
+    }
+  }
 }
